# MedBildA

Sheet1/: .gitignore  CMakeLists.txt  thesis.bib  thesis.cls  thesis.tex
Sheet1/data/: VESSEL12_05_256.mhd  denoised_volume.mhd
Sheet1/source/: .project  Definitions.h  LungSegmentation.cpp  LungSegmentation.h  TVL1.cpp  TVL1.h  VolumeHandler.cpp  main.cpp
Sheet2/: .cproject  .gitignore  .project  CMakeLists.txt
Sheet2/data/: VESSEL12_05_256.mhd  VESSEL12_05_256.raw  lung_volume.mhd
Sheet2/report/: Main.tex
Sheet2/report/base/: packages.tex
Sheet2/source/: .cproject  CenterlineExtraction.cpp  CenterlineExtraction.h  Definitions.h  Numericshelper.h  TubeDetection.cpp  TubeDetection.h  VolumeHandler.h  main.cpp
